force-app/main/default/objects/Activity/fields/Assigned_to__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned to</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The value does not exist or is not compatible with the filter criteria.</errorMessage>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Atividades</relationshipName>
    <type>Lookup</type>
</CustomField>