force-app/main/default/objects/Activity/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The value does not exist or is not compatible with the filter criteria.
You can only assign a lead that is owned by you.</errorMessage>
        <filterItems>
            <field>Lead.Owner:Queue.Id</field>
            <operation>notEqual</operation>
            <value>00G3h000000mgN9</value>
        </filterItems>
        <filterItems>
            <field>Lead.OwnerId</field>
            <operation>equals</operation>
            <valueField>$User.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Atividades</relationshipLabel>
    <relationshipName>Atividades</relationshipName>
    <type>Lookup</type>
</CustomField>